[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/maps/test/tasks/chemical_cabinet/sprites/cabinet-object-door-closed.png" type="Texture" id=1]
[ext_resource path="res://assets/maps/test/tasks/chemical_cabinet/sprites/cabinet-object-cabinet.png" type="Texture" id=2]
[ext_resource path="res://assets/maps/test/tasks/chemical_cabinet/sprites/cabinet-object-door-opened.png" type="Texture" id=3]
[ext_resource path="res://assets/maps/test/tasks/chemical_cabinet/chemical_cabinet.gd" type="Script" id=4]

[node name="ChemicalCabinet" type="Node2D"]
script = ExtResource( 4 )

[node name="CabinetBack" type="Sprite" parent="."]
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 2 )

[node name="DoorOpened" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 3 )

[node name="DoorClosed" type="Sprite" parent="."]
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 1 )

[node name="DoorCloser" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
[connection signal="timeout" from="DoorCloser" to="." method="_on_DoorCloser_timeout"]
